<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.piterquest.activity.FinishActivity">

    <TextView
        android:id="@+id/textview_finish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/congrats"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/image_crown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_finish_title"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/crown"
        android:src="@drawable/crown" />

    <TextView
        android:id="@+id/textview_finish_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_crown"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/you_have_completed"
        android:textColor="@color/colorText"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textview_finish_questname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_finish_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textview_finish_awesome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_finish_questname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="16dp"
        android:text="@string/you_are_awesome"
        android:textColor="@color/colorText"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_tomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_finish_awesome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:onClick="backToQuestList"
        android:text="@string/to_menu"
        android:theme="@style/StartButton" />

</RelativeLayout>
